testdata/zkc/invalid/memory_invalid_04.zkc
;;error:6:7-8:unknown symbol
pub output res(address:u16) -> (word:u16)

fn test(index:u32) {
  ;; write output
  res[index] = 42
  ;; done
  return
}
